--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+*{
+  background-color: #7f4343;
+}
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -38,5 +41,5 @@
 }
 
 .read-the-docs {
-  color: #888;
+  color: green;
 }
